Adds jq & record functions