@@ -1,11 +1,11 @@
 package ktest.script.func.text;
 
+import jakarta.enterprise.context.ApplicationScoped;
 import ktest.script.Context;
 import ktest.script.func.Func;
 import ktest.script.func.FuncDoc;
 import ktest.script.token.Stm;
 import ktest.script.token.Txt;
-import jakarta.enterprise.context.ApplicationScoped;
 
 import static ktest.script.func.FuncType.TEXT;
 
@@ -20,6 +20,6 @@ public class Left extends Func {
         final var params = extractParam(pContext, pParam, String.class, Number.class);
         final var str = (String) params[0];
         final var nb = ((Number) params[1]).intValue();
-        return new Txt(str.substring(0, Math.max(0, Math.min(nb, str.length()))));
+        return new Txt(str.substring(0, Math.clamp(nb, 0, str.length())));
     }
 }
